--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-.text {
-    color: black;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.box {
+
+    width: 400px;
+    height: 400px;
+    border: 4px solid blue;
+    margin: 50px 25px;
+    padding: 25px 30 px;
+}
+.dog {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    
 }
